# joinly

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Dockerfile.cuda  Dockerfile.lite  README.md  TEAMS_SCREENSHARING_PROMPT.md  config.json  entrypoint.sh  package-lock.json  package.json  pyproject.toml  pyrightconfig.json  pytest.ini  ruff.toml
.claude/: settings.json
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: docker-publish-cuda.yml  docker-publish.yml  lint.yml  release-client.yml  release-common.yml  release.yml
client/: pyproject.toml
client/joinly_client/: agent.py  client.py  main.py  prompts.py  types.py  utils.py
common/joinly_common/: types.py
docker/: Dockerfile  Dockerfile.cuda  Dockerfile.lite
examples/: basic_langchain.py  basic_langchain_notion_mcp.py  client_example.py
joinly/: client.py  container.py  core.py  main.py  server.py  session.py  settings.py  types.py  utils.py
joinly/controllers/: __init__.py  speech_controller.py
joinly/controllers/speech/: default.py
joinly/controllers/transcription/: default.py
joinly/providers/: __init__.py  base.py
joinly/providers/browser/: browser_agent.py  browser_session.py  camera_feed.py  meeting_controller.py  meeting_provider.py  screen_share.py
joinly/providers/browser/agents/: __init__.py  base.py  browser_use.py  playwright_mcp.py
joinly/providers/browser/devices/: __init__.py  dbus_session.py  pulse_server.py  virtual_display.py  virtual_microphone.py  virtual_speaker.py
joinly/services/stt/: __init__.py  deepgram.py  google.py  whisper.py
joinly/services/tts/: __init__.py  deepgram.py  elevenlabs.py  google.py  kokoro.py  resemble.py
joinly/services/vad/: __init__.py  base.py  hybrid.py  silero.py  webrtc.py
joinly/utils/: audio.py  events.py  logging.py  usage.py
meeting_agent/: __init__.py  client.py  main.py  meeting_session.py  server.py  session.py  types.py
meeting_agent/agent/: meeting_agent.py
meeting_agent/browser/: browser_agent.py  browser_meeting_controller.py  browser_session.py  meeting_browser.py  meeting_controller.py
meeting_agent/capture/: audio_capturer.py  audio_sink.py
meeting_agent/cli/: main.py
meeting_agent/devices/: pulse_module_manager.py  pulse_server.py  virtual_display.py  virtual_microphone.py  virtual_speaker.py
meeting_agent/session/: meeting_session.py
meeting_agent/shared/: async_processor.py
meeting_agent/speech/: audio_transcriber.py  speech_controller.py  speech_flow_controller.py  tts_service.py  vad_service.py
meeting_agent/transcription/: audio_transcriber.py  vad_chunker.py
scripts/: bootstrap_assets.py  download_assets.py  test_screen_share.py  vnc_watchdog.sh
tests/: conftest.py  test_e2e.py  test_meeting_transcription.py  test_screen_share.py
tests/integration/: conftest.py  test_meeting_transcription.py
tests/utils/: meeting_mockup.py  meeting_transcription.py
