[project]
name = "joinly"
version = "0.3.2"
description = "Make your meetings accessible to AI Agents"
readme = "README.md"
authors = [
    { name = "dbrockmann", email = "dominik@joinly.ai" }
]
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.8",
    "deepgram-sdk>=4.1.1",
    "elevenlabs>=2.5.0",
    "faster-whisper>=1.1.1",
    "fastmcp>=2.10.1",
    "kokoro-onnx>=0.4.8",
    "langchain>=0.3.25",
    "langchain-anthropic>=0.3.15",
    "langchain-mcp-adapters>=0.0.3",
    "langchain-ollama>=0.3.3",
    "langchain-openai>=0.3.16",
    "langgraph>=0.4.1",
    "numpy>=2.2.4",
    "onnxruntime>=1.21.1",
    "playwright>=1.51.0",
    "python-dotenv>=1.1.0",
    "semchunk>=3.2.1",
    "webrtcvad-wheels>=2.0.14",
]

[project.scripts]
joinly = "joinly.main:cli"

[project.optional-dependencies]
cuda = [
    "onnxruntime-gpu>=1.22.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "aiofiles>=24.1.0",
    "aiohttp>=3.11.18",
    "jiwer>=3.1.0",
    "pre-commit>=4.2.0",
    "pyright>=1.1.399",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "rich>=14.0.0",
    "ruff>=0.11.6",
]

[tool.hatch.build.targets.wheel]
packages = ["joinly"]
