[project]
name = "joinly"
version = "0.3.2"
description = "Make your meetings accessible to AI Agents"
readme = "README.md"
authors = [
    { name = "dbrockmann", email = "dominik@joinly.ai" }
]
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.8",
    "deepgram-sdk>=4.1.1",
    "elevenlabs>=2.5.0",
    "faster-whisper>=1.1.1",
    "fastmcp>=2.10.5",
    "joinly-client",
    "kokoro-onnx>=0.4.8",
    "numpy>=2.2.4",
    "onnxruntime>=1.21.1",
    "playwright>=1.51.0",
    "python-dotenv>=1.1.0",
    "semchunk>=3.2.1",
    "webrtcvad-wheels>=2.0.14",
]

[project.scripts]
joinly = "joinly.main:cli"

[project.optional-dependencies]
cuda = [
    "onnxruntime-gpu>=1.22.0",
]

[dependency-groups]
dev = [
    "aiofiles>=24.1.0",
    "aiohttp>=3.11.18",
    "jiwer>=3.1.0",
    "pre-commit>=4.2.0",
    "pyright>=1.1.399",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "rich>=14.0.0",
    "ruff>=0.11.6",
]

[tool.uv.sources]
joinly-client = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel.force-include]
"./shared" = "joinly_shared"

[tool.hatch.build.targets.wheel]
packages = ["joinly", "joinly_shared"]

[tool.uv.workspace]
members = [
    "client",
]
