[project]
name = "joinly-client"
version = "0.1.0"
description = "Client for joinly: Make your meetings accessible to AI Agents"
readme = "README.md"
authors = [
    { name = "dbrockmann", email = "dominik@joinly.ai" }
]
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.8",
    "fastmcp>=2.10.1",
    "llama-index>=0.12.48",
    "llama-index-llms-anthropic>=0.7.6",
    "llama-index-llms-azure-openai>=0.3.4",
    "llama-index-llms-ollama>=0.6.2",
    "llama-index-llms-openai>=0.4.7",
    "python-dotenv>=1.1.0",
    "rich>=14.0.0",
]

[project.scripts]
joinly-client = "joinly_client.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["joinly_client"]

[tool.hatch.build.targets.wheel.force-include]
"../shared" = "shared"

[project.urls]
"Repository" = "https://github.com/joinly-ai/joinly"
